route-table-association.tf
resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public_2.id

  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {

  subnet_id = aws_subnet.private_1.id

  route_table_id = aws_route_table.private.id
}
